<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addMeetinActivity_parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/color_backgroud_drawable">

    <androidx.cardview.widget.CardView
        android:id="@+id/nameMeetingCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="30dp">

            <include layout="@layout/toolbar"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Ajouter une réunion"
                android:textColor="#fff"
                android:textSize="20dp" />


        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="5dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:hint="@string/nameMeeting"
                    android:theme="@style/TextInputLayoutStyle"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/nameMeetingEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:hint="@string/place"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <AutoCompleteTextView
                        android:id="@+id/autoCompleteTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="15dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:hint="@string/time">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/timeEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:hint="@string/topic">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/topicEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.hootsuite.nachos.NachoTextView
                    android:id="@+id/email_nacho_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="50dp"
                    android:hint="@string/addCoWorkers"/>

                <Button
                    android:id="@+id/addNewMeetingButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_capsule_shape"
                    android:drawableStart="@drawable/ic_check_white_24dp"
                    android:drawablePadding="5dp"
                    android:paddingLeft="40dp"
                    android:paddingRight="35dp"
                    android:layout_gravity="bottom|right"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>
</LinearLayout>